# TactixStation

./: .env.example  App.jsx  README.md  app.js  env.pro.example  https-redirect.js  index.html  main.html  main.json  main.jsx  main.py  main.tbl  main.toml  main.xml  manifest.json  manifest.tbl  manifest.xml  pyproject.toml  radio_player.jsx  satellite_tracker.jsx  server.js  setup.sh  style.css  style.py  style.tbl  style.xml  utils.js  vite.config.js
components/: Loader.jsx  Notification.jsx
hooks/: Location.js
