[tool.poetry]
name = "tactixstation-backend"
version = "1.0.0"
description = "Backend for TactixStation navigation and radio app"
authors = ["Your Name <youremail@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
uvicorn = "^0.22.0"
sqlalchemy = "^2.0"
databases = "^0.6.0"
pydantic = "^1.10"
aiofiles = "^23.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4"
black = "^23.7"
isort = "^6.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
